[build_ext]
inplace=True

[metadata]
name = winhttp
version = 0.1
author = Steve Dower
author_email = steve.dower@python.org
url = https://github.com/zooba/winhttp
license_file = LICENSE
description = "Python module for using WinHttp"
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = winhttp
include_package_data = True
zip_safe = False
python_requires = >=3.6
#install_requires =
